// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details View -> Quick Assess -> Instructions Requirement page should pass accessibility validation with highContrastMode=false 1`] = `
[
  {
    "id": "label-content-name-mismatch",
    "nodes": [
      {
        "failureSummary": "Fix any of the following:
  Text inside the element is not included in the accessible name",
        "selector": [
          "#header61-visualizationButton",
        ],
      },
    ],
  },
]
`;

exports[`Details View -> Quick Assess -> Instructions Requirement page should pass accessibility validation with highContrastMode=true 1`] = `
[
  {
    "id": "color-contrast",
    "nodes": [
      {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 3.44 (foreground color: #106ebe, background color: #161616, font size: 11.3pt (15px), font weight: normal). Expected contrast ratio of 4.5:1",
        "selector": [
          "#id__48",
        ],
      },
    ],
  },
  {
    "id": "label-content-name-mismatch",
    "nodes": [
      {
        "failureSummary": "Fix any of the following:
  Text inside the element is not included in the accessible name",
        "selector": [
          "#header61-visualizationButton",
        ],
      },
    ],
  },
]
`;
